added form to cellphones

--- a/src/style/_mixin.scss
+++ b/src/style/_mixin.scss
@@ -52,4 +52,19 @@
    display: -webkit-flex;
    display: flex;
  }
+@mixin input-placeholder {
+  ::-webkit-input-placeholder {
+     @content;
+}
+  :-moz-placeholder {/* Firefox 18- */
+     @content;
+}
+  ::-moz-placeholder {/* Firefox 19+ */
+     @content;
+}
+  :-ms-input-placeholder {
+     @content;
+}
+
+}
 
