--- a/src/style/blocks/global/body.scss
+++ b/src/style/blocks/global/body.scss
@@ -1,12 +1,12 @@
 body {
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
     margin: 0 auto;
-    width: 320px;
+    min-width: 320px;
+    max-width: 1200px;
+    width: 100%;
     
 }
-header {
-    min-height: 568px;
-}
+
 main {
     margin: 0 auto;
     width: 260px;
@@ -17,20 +17,30 @@ img{
 }
 @media (min-width:768px){
 
+    header{        
+        margin: 0 auto;
+        min-width: 320px;
+    max-width: 1200px;
+    }
+
     body {
-       min-width: 768px;
-       margin: 0 auto; 
+        margin: 0 auto;
+        min-width: 320px;
+        max-width: 1200px;
+        width: 100%;
     }
     main {
-        min-width: 668px;
+        width: 668px;
         margin: 0 auto; 
     }
 }
 @media (min-width: 1024px){
 
     body {
-        min-width: 1150px;
         margin: 0 auto;
+    min-width: 320px;
+    max-width: 1200px;
+    width: 100%;
     }
     main {
         min-width: 1050px;
