--- a/src/style/blocks/pageMain/aboutUs.scss
+++ b/src/style/blocks/pageMain/aboutUs.scss
@@ -127,7 +127,7 @@
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: baseline;
-    width: 630px;
+    // width: 630px;
   }
 
     &__feature:nth-child(1) {
