--- a/src/style/blocks/pageFooter/bottomFooter.scss
+++ b/src/style/blocks/pageFooter/bottomFooter.scss
@@ -1,25 +1,28 @@
-.footer{
-  // &__copyright {
-  // display: flex;
-  // }
-  &__creator{
-  @include textLg(19px, 700);
-  cursor: pointer;
-  text-align: center;
-  // margin-left: 69px;
-  }
-  &__creator:active{
-  opacity:0.3;
-  }
-&__icon {
-  display: inline-block;
-   background: url('/src/img/sprites.png') no-repeat;
-   background-position: -14px -158px;
-   width: 27px;
-   height: 34px;
-   vertical-align: middle;
-   margin-left: 30px;
- }
+.footer {
+
+     &__copyright {
+        // margin-top: 20px;
+        cursor: pointer;
+      }
+
+      &__creator{
+        @include textLg(19px, 700);
+        text-align: center;
+      }
+
+      &__creator:active{
+        opacity:0.3;
+      }
+
+      &__icon {
+        display: inline-block;
+        background: url('/src/img/sprites.png') no-repeat;
+        background-position: -14px -158px;
+        width: 27px;
+        height: 34px;
+        vertical-align: middle;
+        margin-left: 30px;
+      }
 
  &__icon:hover {
    //display: inline-block;
@@ -29,7 +32,7 @@
    height: 34px;
    vertical-align: middle;
    margin-left: 30px;
- }
+  }
 
  &__icon:active {
    //display: inline-block;
@@ -39,6 +42,6 @@
    height: 34px;
    vertical-align: middle;
    margin-left: 30px;
- }
+  }
 
 }
