--- a/src/style/blocks/pageFooter/bottomFooter.scss
+++ b/src/style/blocks/pageFooter/bottomFooter.scss
@@ -1,44 +1,52 @@
-.footer{
-  // &__copyright {
-  // display: flex;
-  // }
-  &__creator{
-  @include textLg(19px, 700);
-  cursor: pointer;
-  text-align: center;
-  // margin-left: 69px;
+.footer {
+  &__copyright {
+    // margin-top: 20px;
+    cursor: pointer;
   }
-  &__creator:active{
-  opacity:0.3;
+  &__creator {
+    @include textLg(19px, 700);
+    text-align: center;
   }
-&__icon {
-  display: inline-block;
-   background: url('/src/img/sprites.png') no-repeat;
-   background-position: -14px -158px;
-   width: 27px;
-   height: 34px;
-   vertical-align: middle;
-   margin-left: 30px;
- }
-
- &__icon:hover {
-   //display: inline-block;
-   background: url('/src/img/sprites.png') no-repeat;
-   background-position: -61px -160px;
-   width: 27px;
-   height: 34px;
-   vertical-align: middle;
-   margin-left: 30px;
- }
-
- &__icon:active {
-   //display: inline-block;
-   background: url('/src/img/sprites.png') no-repeat;
-   background-position: -108px -159px;
-   width: 27px;
-   height: 34px;
-   vertical-align: middle;
-   margin-left: 30px;
- }
-
+  &__creator:active {
+    opacity: 0.3;
+  }
+  &__icon {
+    display: inline-block;
+    background: url('/src/img/sprites.png') no-repeat;
+    background-position: -14px -158px;
+    width: 27px;
+    height: 34px;
+    vertical-align: middle;
+    margin-left: 30px;
+  }
+  &__icon:hover {
+    //display: inline-block;
+    background: url('/src/img/sprites.png') no-repeat;
+    background-position: -61px -160px;
+    width: 27px;
+    height: 34px;
+    vertical-align: middle;
+    margin-left: 30px;
+  }
+  &__icon:active {
+    //display: inline-block;
+    background: url('/src/img/sprites.png') no-repeat;
+    background-position: -108px -159px;
+    width: 27px;
+    height: 34px;
+    vertical-align: middle;
+    margin-left: 30px;
+  }
 }
+
+
+
+
+
+
+
+
+
+
+
+
