--- a/src/style/blocks/pageMain/form.scss
+++ b/src/style/blocks/pageMain/form.scss
@@ -1,9 +1,20 @@
-body{
-//border: 1px solid black;
+
+
+
+
+
+.main{
 margin: 0 auto;
-}
+
 .page-form{
-width: 320px;
+
+margin: 0 auto;
+min-width:320px;
+
+//width: 100%;
+//min-width:320px;
+//display: flex;
+//width: 320px;
 margin-top: -510px;
 margin-left: -30px;
 &__title{
@@ -11,6 +22,7 @@ margin-left: -30px;
 line-height: 30px;
 background: #f1f1f1;
 padding:70px 35px 80px 38px;
+
 }
 &__text{
 @include textLg(13px, 400);
@@ -278,6 +290,27 @@ margin-left: 30px;
 margin-bottom: 0px;
 }
 }
+//@media (min-width:768px){
+//.page-form{
+//width: 768px;
+//&__title{
+//@include textLg(43px, 700);
+//line-height: 50px;
+//padding:95px 180px 71px 191px;
+//}
+//&__text{
+//@include textLg(17px, 400);
+//line-height: 30px;
+//margin-left: 50px;
+//margin-top: 36px;
+//}
+
+//}
+
+//}
+
+}
+
 
 
 
