corrected form to the mobile version

--- a/src/style/_mixin.scss
+++ b/src/style/_mixin.scss
@@ -56,10 +56,10 @@
   ::-webkit-input-placeholder {
      @content;
 }
-  :-moz-placeholder {/* Firefox 18- */
+  :-moz-placeholder {
      @content;
 }
-  ::-moz-placeholder {/* Firefox 19+ */
+  ::-moz-placeholder {
      @content;
 }
   :-ms-input-placeholder {
