--- a/src/style/blocks/pageFooter/topFooter.scss
+++ b/src/style/blocks/pageFooter/topFooter.scss
@@ -13,7 +13,7 @@
         text-align: center;
         height: 80px;
         width: 260px;
-        border-bottom:1px solid $frameMenu;
+        border-bottom:1px solid #e5e5e5;
         margin: 0 auto;
         cursor: pointer;
     }
