--- a/src/style/blocks/pageHeader/topMenu.scss
+++ b/src/style/blocks/pageHeader/topMenu.scss
@@ -1,6 +1,6 @@
 
 .menu-top {
-//display: none;
+display: none;
   &__logo {
     text-align: center;
     height: 59px;
@@ -30,7 +30,7 @@
 
   &__logo-img{
     display: block;
-    background: url(/src/img/sprites.png) no-repeat;
+    background: url('/src/img/sprites.png') no-repeat;
     background-position: -457px -8px ;
 	  width: 86px;
     height: 35px;
@@ -48,7 +48,7 @@
 
   &__cart{
     display: inline-block;
-    background: url(/src/img/sprites.png) no-repeat;
+    background: url('/src/img/sprites.png') no-repeat;
     background-position: -16px -214px ;
     width: 21px;
     height: 18px;
