--- a/src/style/blocks/pageMain/form.scss
+++ b/src/style/blocks/pageMain/form.scss
@@ -15,14 +15,15 @@ min-width:320px;
 //min-width:320px;
 //display: flex;
 //width: 320px;
-margin-top: -510px;
+//margin-top: -365px;
+margin-top: 80px;/////
 margin-left: -30px;
 &__title{
 @include textLg(27px, 700);
 line-height: 30px;
 background: #f1f1f1;
 padding:70px 35px 80px 38px;
-
+margin-bottom: 19px;
 }
 &__text{
 @include textLg(13px, 400);
@@ -30,22 +31,24 @@ line-height: 24px;
 color:#444444;
 margin-left: 30px;
 margin-right: 48px;
+margin-bottom: 5px;
+
 }
 .filters{
-display: flex;
-flex-direction: column;
-//flex-wrap:nowrap;
 height: 183px;
+width: 260px;
 &__line::after{
 content:"";
 display: inline-block;
-vertical-align: middle;
-margin-top: -70px;
+margin-top: -68px;
 height: 1px;
 background-color:#63d1bb;
 margin-left: 92px;
 width: 198px;
 position: relative;
+vertical-align: middle;
+
+
 }
 &__title{
 @include textLg(17px, 700);
@@ -54,21 +57,24 @@ text-transform:uppercase;
 color: #63d1bb;
 margin-left: 29px;
 border-right: 198px;
-margin-top: 10px;
+top: 0px;
 }
- &__form-radio{
-margin-left: 30px;
+ &__form--radio{
 display: flex;
 flex-direction: column;
-//height: 150px;
-margin-top: 58px;
+top: 0px;
+
 }
-&__input{
-vertical-align:top;
-margin: 0 3px 0 0;
+&__radio-grup{
+margin-top: -7px;
+
 }
 &__input,&__label{
 cursor: pointer;
+
+left: 30px;
+top: 8px;
+
 }
 &__input:not(checked) {
   position: absolute;
@@ -81,21 +87,21 @@ cursor: pointer;
 &__input:not(checked)+label::before{
 content:'';
 position: absolute;
-top: -8px;
+top: -5px;
 left: 0;
-width: 40px;
-height: 40px;
+width: 38px;
+height: 38px;
 border:2px solid #444444;
 border-radius:50%;
 background:#fff;
 margin-left: -30px;
-
+//margin-bottom:0px;
 }
 &__input:not(checked) + label::after{
 content:'';
 position: absolute;
-top:6px;
-left: -15px;
+top:8px;
+left: -16px;
 width: 16px;
 height: 16px;
 background-color:#63d1bb;
@@ -112,27 +118,29 @@ line-height: 18px;
 display: flex;
 margin-left: 30px;
 cursor: pointer;
-margin-top: -60px;
-margin-bottom: 90px;
+margin-top: -7px;
+margin-bottom: 38px;
+
 }
 }
 .filter{
+&__form--checkbox{
+margin-top: -9px;
+}
+&__ch-grup{
 display: flex;
 flex-direction: column;
 
-&__form-checkbox{
-display: flex;
-flex-direction:column;
-margin-top: -52px;
+}
+&__ch-gr{
+margin-bottom: 43px;
+
 }
 &__label {
   @include textLg(17px, 700);
   line-height: 18px;
-  display: flex;
   margin-left: 62px;
   cursor: pointer;
-  margin-top: 50px;
-
 }
 &__input {
   vertical-align: top;
@@ -142,6 +150,7 @@ margin-top: -52px;
 &__input,
 &__label {
   cursor: pointer;
+//margin-top: 50px;
 }
 
 &__input:not(checked) {
@@ -157,25 +166,28 @@ margin-top: -52px;
 position: absolute;
   top: -7px;
   left: 0;
-  width: 40px;
-  height: 39px;
+  width: 36px;
+  height: 35px;
   border: 2px solid #444444;
   background: #fff;
   margin-left: -30px;
+margin-bottom: -20px;
 }
 &__input +label:after{
 content:'';
-display: inline-block;
+
 height: 8px;
-width: 22px;
+width: 20px;
 border-left:2px solid;
 border-bottom:2px solid;
 transform: rotate(-45deg);
-margin-left: -55px;
-margin-top: 5px;
+left: -20px;
+margin-top: 0px;
+
 }
 &__input +label{
 position: relative;
+
 }
 &__input +label:before,
 &__input +label:after{
@@ -185,7 +197,7 @@ position: absolute;
 top: 3px;
 }
 &__input +label :after{
-left: 4px;
+left:4px;
 top: 7px;
 }
 &__input+label:after{
@@ -196,9 +208,15 @@ content:'';
 }
 }
 .customer{
+&__form{
+margin-top: -19px;
+}
 &__name{
 display: flex;
   flex-direction: column;
+}
+&__name-grup{
+top: 0px;
 }
 &__title{
   @include textLg(17px, 700);
@@ -206,13 +224,13 @@ display: flex;
   color: #63d1bb;
   text-transform:uppercase;
   margin-left: 30px;
-  margin-top: 50px;
+
 }
 &__label{
 @include textLg(17px, 700);
 line-height: 18px;
 margin-left: 30px;
-//padding-bottom: 14px;
+
 }
     &__input {
 @include textLg(17px, 400);
@@ -228,7 +246,7 @@ padding:15px 0px 17px 0;
 margin-bottom: 20px;
 }
 &__data{
-margin-top: -40px;
+margin-top: -10px;
 display: flex;
 flex-direction: column;
 }
@@ -240,8 +258,7 @@ height: 24px;
 display: block;
 margin-left: 250px;
 margin-top: -10px;
-//position: absolute;
-//display:block;
+
 }
 &__phone,&__email  {
 width: 260px;
@@ -254,7 +271,7 @@ opacity:0.6;
 line-height: 18px;
 margin-left: 30px;
 margin-top: -40px;
-margin-bottom: -20px;
+margin-bottom: 12px;
 }
 &__img-email{
 background:url('/src/img/mail.png') no-repeat;
@@ -269,13 +286,13 @@ color:#000;
 opacity: 0.6;
 @include textLg(17px, 400);
 line-height: 18px;
-padding: 15px 30px 70px 17px;
+padding: 15px 30px 83px 17px;
 width: 210px;
 border: 2px solid #000;
 background-color: #ffffff;
 margin-left: 30px;
 margin-top: -10px;
-margin-bottom: 12px;
+margin-bottom: 17px;
 }
 }
 &__note{
@@ -290,24 +307,7 @@ margin-left: 30px;
 margin-bottom: 0px;
 }
 }
-//@media (min-width:768px){
-//.page-form{
-//width: 768px;
-//&__title{
-//@include textLg(43px, 700);
-//line-height: 50px;
-//padding:95px 180px 71px 191px;
-//}
-//&__text{
-//@include textLg(17px, 400);
-//line-height: 30px;
-//margin-left: 50px;
-//margin-top: 36px;
-//}
-
-//}
-
-//}
+//////////
 
 }
 
