--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -1,4 +1,7 @@
 
+ .open{
+  display: block;
+}
 .main-catalog {
     margin: 0 auto;
     margin-top: -510px;////изменить
@@ -665,6 +668,7 @@ margin-top: -20px;
      margin-top: 51px;
      border: none;
    }
+
 }
    .overlay {
      width: 100%;
