added form for free

--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -465,7 +465,7 @@ border: 2px solid #63d1bb;
 
 .main-catalog{
   width: 768px;
-  margin-top: -35px;
+  //margin-top: -35px;
   //margin-top: -515px; ///////как то надо изменить))
 &__title {
 @include textLg(43px, 700);
