--- a/src/style/blocks/pageMain/form.scss
+++ b/src/style/blocks/pageMain/form.scss
@@ -1,24 +1,17 @@
 
-
-
-
-
 .main{
 margin: 0 auto;
 
 .page-form{
-
 margin: 0 auto;
 min-width:320px;
-
-//width: 100%;
-//min-width:320px;
-//display: flex;
-//width: 320px;
-//margin-top: -365px;
-margin-top: 80px;/////
+//width:100%;
 margin-left: -30px;
 &__title{
+margin-top: 80px;
+
+//min-width:320px;
+//width:100%;
 @include textLg(27px, 700);
 line-height: 30px;
 background: #f1f1f1;
@@ -26,6 +19,8 @@ padding:70px 35px 80px 38px;
 margin-bottom: 19px;
 }
 &__text{
+display: flex;
+flex-wrap:wrap;
 @include textLg(13px, 400);
 line-height: 24px;
 color:#444444;
@@ -60,7 +55,7 @@ border-right: 198px;
 top: 0px;
 }
  &__form--radio{
-display: flex;
+ @include flexbox;
 flex-direction: column;
 top: 0px;
 
@@ -106,7 +101,7 @@ width: 16px;
 height: 16px;
 background-color:#63d1bb;
 border-radius:50%;
-//box-shadow: inset 0 1px 1px rgba(0, 0, 0, .5);
+
 opacity: 0;
 }
 &__input:checked + label:after{
@@ -115,7 +110,8 @@ opacity: 1;
 &__label{
 @include textLg(17px, 700);
 line-height: 18px;
-display: flex;
+ @include flexbox;
+
 margin-left: 30px;
 cursor: pointer;
 margin-top: -7px;
@@ -128,7 +124,8 @@ margin-bottom: 38px;
 margin-top: -9px;
 }
 &__ch-grup{
-display: flex;
+ @include flexbox;
+
 flex-direction: column;
 
 }
@@ -175,7 +172,6 @@ margin-bottom: -20px;
 }
 &__input +label:after{
 content:'';
-
 height: 8px;
 width: 20px;
 border-left:2px solid;
@@ -212,7 +208,8 @@ content:'';
 margin-top: -19px;
 }
 &__name{
-display: flex;
+ @include flexbox;
+
   flex-direction: column;
 }
 &__name-grup{
@@ -247,7 +244,8 @@ margin-bottom: 20px;
 }
 &__data{
 margin-top: -10px;
-display: flex;
+ @include flexbox;
+
 flex-direction: column;
 }
 &__img-phone {
@@ -258,7 +256,6 @@ height: 24px;
 display: block;
 margin-left: 250px;
 margin-top: -10px;
-
 }
 &__phone,&__email  {
 width: 260px;
@@ -307,9 +304,263 @@ margin-left: 30px;
 margin-bottom: 0px;
 }
 }
-//////////
+@media (min-width:768px){
+.page-form{
+min-width: 768px;
+//width: 768px;
+&__title {
+  @include textLg(43px, 700);
+  padding: 95px 0px 72px 188px;
+  background: #f1f1f1;
+  line-height: 50px;
+margin-top: 0px;
 
 }
+&__title-line:after {
+  content: "";
+  display: block;
+  position: relative;
+  background-repeat: repeat;
+  height: 10px;
+  background-size: 33px 14px;
+  background-image: radial-gradient(circle at 20px 13px, #f1f1f1 13px, transparent 13px);
+  right: 0;
+  left: 0px;
+  bottom: 20px;
+  transform: rotate(-180deg);
+}
+&__text{
+@include textLg(17px, 400);
+line-height: 30px;
+margin-left: 50px;
+margin-top: 54px;
+padding-bottom: 50px;
+}
+.filters{
+  width: 100%;
+&__line::after{
+display: none;
+}
+&__title{
+//position: relative;
+margin-left: 0;
+margin-top: 30px;
+margin-bottom: -18px;
+
+}
+&__form--radio{
+display: inline-block;
+position: relative;
+margin-left: 50px;
+margin-top: 10px;
+top: -20px;
+}
+&__radio-grup{
+margin-left: 84px;
+margin-top: -10px;
+margin-bottom: 58px;
+width: 100%;
+}
+&__input:not(checked)+label::before {
+  content: '';
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 50px;
+  height: 50px;
+  border: 2px solid #444444;
+  border-radius: 50%;
+  background: #fff;
+ // margin-left: -30px;
+  //margin-bottom:0px;
+}
+&__input:not(checked)+label::after {
+  content: '';
+  position: absolute;
+  top: 10px;
+  left: -14px;
+  width: 22px;
+  height: 22px;
+  background-color: #63d1bb;
+  border-radius: 50%;
+opacity: 0;
+}
+&__input:not(checked)+label {
+  position: relative;
+  padding: 10px 0px 0px 53px;
+}
+
+&__label  {
+  @include textLg(19px, 700);
+  line-height: 18px;
+@include flexbox;
+
+  margin-left: 30px;
+  cursor: pointer;
+  margin-top: -7px;
+ // margin-bottom: 38px;
+}
+}
+.filter{
+ @include flexbox;
+flex-direction: row;
+height: 304px;
+background-color: #f1f1f1;
+.filters__title {
+margin-left: 50px;
+  margin-top: 74px;
+}
+&__ch-grup{
+@include flexbox;
+flex-direction:row;
+flex-wrap:wrap;
+margin-left: 184px;
+margin-top: -38px;
+position: relative;
+height: 200px;
+}
+&__ch-gr{
+@include flexbox;
+width: 190px;
+margin-top: 15px;
+margin-right: 75px;
+}
+&__input:not(checked)+label::before {
+  content: '';
+  position: absolute;
+  top: -8px;
+  left: 0;
+  width: 50px;
+  height: 48px;
+  border: 2px solid #444444;
+  background: #fff;
+  margin-left: -30px;
+  margin-bottom: -20px;
+}
+&__input:not(checked)+label {
+  position: relative;
+  padding: 0px 0 0px 52px;
+}
+&__label{
+@include textLg(19px, 700);
+line-height: 18px;
+}
+&__input+label:after {
+  content: '';
+  height: 15px;
+  width: 28px;
+  border-left: 2px solid;
+  border-bottom: 2px solid;
+  transform: rotate(-45deg);
+  left: -15px;
+  margin-top: 0px;
+}
+&__input+label:after {
+  content: none;
+}
+}
+.customer{
+margin-top: 55px;
+margin-left: 50px;
+
+&__name-grup{
+display: flex;
+margin-left: 140px;
+margin-top: 40px;
+}
+&__label{
+@include textLg(19px, 700);
+line-height: 18px;
+margin-right: 50px;
+margin-top: -40px;
+
+}
+&__input{
+padding-left: 16px;
+width: 410px;
+margin-bottom: 35px;
+height: 20px;
+margin-top: -55px;
+@include textLg(19px, 400);
+line-height: 18px;
+margin-left: -30px;
+}
+&__input--line{
+width: 360px;
+}
+&__data--block {
+
+
+width: 768px;
+height: 228px;
+background-color: #f1f1f1;
+margin-top: 25px;
+margin-left: -50px;
+margin-bottom: 33px;
+}
+
+.filters__title--data{
+margin-left: 50px;
+margin-top: 70px;
+@include textLg(17px, 700);
+}
+&__img-phone{
+background:url('/src/img/sprites.png') -212px -263px;
+z-index: 7;
+margin-top: 60px;
+position: absolute;;
+margin-left: 665px;
+cursor: pointer;
+z-index: 9;
+width: 25px;
+height: 24px;
+}
+&__img-email{
+display: block;
+margin-top: 140px;
+margin-left: 665px;
+position: absolute;
+z-index: 7;
+cursor: pointer;
+}
+&__phone ,&__email{
+margin-left: 215px;
+margin-top: -20px;
+margin-bottom: -25px;
+padding:10px 220px 16px 18px;
+@include textLg(19px, 400);
+background-color: #f1f1f1;
+}
+&__extra{
+margin-left: 168px;
+@include input-placeholder;
+@include textLg(19px, 400);
+width: 470px;
+padding: 13px 10px 83px 15px;
+margin-bottom: 50px;
+}
+}
+&__note {
+@include textLg(17px, 400);
+line-height: 30px;
+margin-left: 420px;
+position:relative;
+display: inline-block;
+margin-top:15px;
+}
+&__btn{
+margin-bottom: 50px;
+margin-left: 50px;
+width: 230px;
+margin-top: -38px;
+display: inline-block;
+position: relative;
+vertical-align: middle;
+}
+}
+}
+}
+
 
 
 
