--- a/src/style/blocks/pageHeader/bottomMenu.scss
+++ b/src/style/blocks/pageHeader/bottomMenu.scss
@@ -1,16 +1,20 @@
 .menu-bottom {
-    background: url(/src/img/header-mobile-1x.jpg);
-    background-position: 50% 0%;
-    background-repeat: no-repeat;
+
+    @media only screen and (max-width: 767px) {
+        background: url(/src/img/header-mobile-1x.jpg);
+        background-position: 50% 0;
+        background-repeat: no-repeat;
+        background-size: 100% auto;
+    }
 
     &__title {
-       // @include textLg(27px,700);
+      
 
         @include titleXlMob;
         width: 244px;
         text-align: center;
         margin: 0 auto;
-        padding: 77px 0 121px 0;
+        padding: 77px 0 140px 0;
     }
 
     &__list {
@@ -95,11 +99,11 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        background: url(/src/img/header-tablet-1x.jpg);
-        background-position: 50% 90%;
+        background: url(/src/img/header-tablet-2x.jpg);
+        background-position: center center;
         background-repeat: no-repeat;
+        background-size: cover;
         height: 748px;
-        
 
         &__title {
             @include titleXlTab;
@@ -176,15 +180,27 @@
 
 @media (min-width: 1024px) {
 
+
     .menu-bottom{
-        background: url(/src/img/header-desktop-1x.jpg);
-        background-position: 50% 112%;
+
+        background: url(/src/img/header-desktop-2x.jpg);
+        background-position: center center;
         background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: scroll;
+
+        
+        
 
         &__list {
             position: relative;
-            margin: 372px 0 0 0;
             width: 1050px;
+            margin: 370px 0 0 0;
+            
+        }
+
+        &__title{
+            top: 145px;
         }
 
         &__item {
