--- a/src/style/blocks/pageMain/aboutUs.scss
+++ b/src/style/blocks/pageMain/aboutUs.scss
@@ -14,6 +14,11 @@
       margin: 0;
       width: 250px;
     }
+
+    &__feature::before{
+      margin: 20px 0 25px 0px;
+    }
+
     &__feature:nth-child(2){
       width: 200px;
     }
@@ -39,7 +44,7 @@
       background-position: -157px -7px ;
 	    width: 33px;
       height: 38px;
-      margin: 20px;
+      // margin: 20px;
     }
 
     &__feature:nth-child(2)::before{
@@ -49,7 +54,7 @@
       background-position: -151px -58px ;
 	    width: 47px;
       height: 27px;
-      margin: 15px;
+      // margin: 15px;
     }
 
     &__feature:nth-child(3):before{
@@ -59,7 +64,7 @@
       background-position: -157px -109px ;
 	    width: 34px;
       height: 27px;
-      margin: 20px;
+      // margin: 20px;
     }
     
     &__feature:nth-child(4):before{
@@ -69,7 +74,7 @@
       background-position: -155px -156px ;
 	    width: 35px;
       height: 34px;
-      margin: 20px;
+      // margin: 20px;
     }
 
     &__feature:nth-child(5):before{
@@ -79,7 +84,7 @@
       background-position: -152px -212px ;
 	    width: 55px;
       height: 23px;
-      margin: 15px;
+      // margin: 15px;
     }
 
     &__feature:nth-child(6):before{
@@ -89,7 +94,7 @@
       background-position: -157px -255px ;
 	    width: 33px;
       height: 32px;
-      margin: 20px;
+      // margin: 20px;
     }
 }
   .slider {
@@ -116,6 +121,9 @@
 @media (min-width: 768px) {
 
   .about-us {
+
+    width: 668px;
+    margin: 0 auto;
 
     &__title {
       align-self: flex-start;
