--- a/src/style/blocks/pageMain/form.scss
+++ b/src/style/blocks/pageMain/form.scss
@@ -19,8 +19,7 @@ padding:70px 35px 80px 38px;
 margin-bottom: 19px;
 }
 &__text{
-display: flex;
-flex-wrap:wrap;
+
 @include textLg(13px, 400);
 line-height: 24px;
 color:#444444;
@@ -486,7 +485,7 @@ margin-left: -30px;
 width: 360px;
 }
 &__data--block {
-width: 768px;
+width: 100%;
 height: 228px;
 background-color: #f1f1f1;
 margin-top: 25px;
@@ -498,10 +497,11 @@ margin-bottom: 33px;
 margin-left: 50px;
 margin-top: 70px;
 @include textLg(17px, 700);
+line-height:16px ;
 }
 &__img-phone{
 background:url('/src/img/sprites.png') -212px -263px;
-z-index: 7;
+
 margin-top: 60px;
 position: absolute;;
 margin-left: 665px;
@@ -524,6 +524,7 @@ margin-top: -20px;
 margin-bottom: -25px;
 padding:10px 220px 16px 18px;
 @include textLg(19px, 400);
+line-height: 18px;
 background-color: #f1f1f1;
 }
 &__extra{
@@ -533,6 +534,7 @@ margin-left: 168px;
 width: 470px;
 padding: 13px 10px 83px 15px;
 margin-bottom: 50px;
+line-height: 18px;
 }
 }
 &__note {
@@ -551,6 +553,173 @@ margin-top: -38px;
 display: inline-block;
 position: relative;
 vertical-align: middle;
+}
+}
+}
+@media (min-width:1150px){
+.page-form{
+min-width: 1150px;
+
+margin-bottom: -60px;
+&__title{
+@include textLg(53px, 700);
+line-height: 57px;
+padding:94px 320px 95px 334px;
+}
+&__text{
+@include textLg(17px, 400);
+line-height: 30px;
+color:#444444;
+margin-left: 225px;
+margin-right: 200px;
+margin-top: 100px;
+}
+.filters{
+&__title{
+margin-left: 60px;
+}
+&__form--radio{
+left: 5px;
+margin-top: 12px;
+}
+
+  &__input:not(checked),&__label:hover::before {
+  content: '';
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 50px;
+  height: 50px;
+  border: 2px solid #63d1bb;
+
+  border-radius: 50%;
+  background: #fff;
+  }
+&__input:not(checked),&__label:active::before {
+  content: '';
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 50px;
+  height: 50px;
+  border: 2px solid #e5e5e5;
+  border-radius: 50%;
+  background: #fff;
+}
+}
+
+
+.filter{
+height: 228px;
+.filters__title{
+margin-left: 110px;
+}
+&__ch-grup{
+left: 10px;
+
+height: 142px;
+right: 30px;
+top: -5px;
+}
+&__input:not(checked)+label:hover::before {
+  content: '';
+  position: absolute;
+  top: -8px;
+  left: 0;
+  width: 50px;
+  height: 48px;
+  border: 2px solid #63d1bb;
+background: #fff;
+  margin-left: -30px;
+  margin-bottom: -20px;
+}
+&__input:not(checked)+label:active::before {
+  content: '';
+  position: absolute;
+  top: -8px;
+  left: 0;
+  width: 50px;
+  height: 48px;
+  border: 2px solid #e5e5e5;
+background: #fff;
+  margin-left: -30px;
+  margin-bottom: -20px;
+}
+
+
+&__label{
+display: flex;
+margin-bottom: 3px;
+}
+}
+.customer{
+&__name-grup{
+margin-left: 150px;
+}
+&__input{
+width: 563px;
+}
+&__input:hover{
+border-bottom: 2px solid #63d1bb;
+}
+&__input:active {
+  border-bottom: 2px solid #63d1bb;
+}
+
+&__data--block{
+width:1150px;
+height: 228px;
+background-color: #f1f1f1;
+
+}
+.filters__title--data{
+margin-left: 110px;
+}
+&__phone,
+&__email{
+margin-left: 225px;
+width: 460px;
+}
+&__phone:hover,
+&__email:hover{
+border-bottom: 2px solid #63d1bb;
+
+}
+
+&__img-phone,&__img-email{
+margin-left: 890px;
+}
+&__img-phone:hover{
+background:url('/src/img/sprites.png')  -264px -263px;
+width: 25px;
+height: 24px;
+//position: absolute;
+margin-left: 890px;
+//display: block;
+z-index: 7;
+}
+&__extra{
+width: 670px;
+margin-left: 174px;
+}
+&__extra:hover{
+border: 2px solid #63d1bb;
+
+}
+}
+&__note{
+margin-left:620px;
+display: block;
+position: relative;
+margin-top: 15px;
+}
+&__btn{
+margin-left: 220px;
+margin-top: -100px;
+//display: inline-block;
+//position: relative;
+vertical-align: middle;
+margin-bottom: -50px;
 }
 }
 }
